# DeviceTracking

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
DataBase_Integration/: CMakeLists.txt  data1.cpp  data1.h
Service1/: CMakeLists.txt  service1.cpp  service1.cpp.sKVavV  service1.h
